--- a/index.html
+++ b/index.html
@@ -3,41 +3,42 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Wheather App</title>
+    <title>Weather App</title>
     <link rel="stylesheet" href="style.css" />
     <link rel="shortcut icon" href="img/clear.png" />
+    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet" />
   </head>
   <body>
     <div class="card">
       <div class="search">
         <input type="text" placeholder="Enter city name" spellcheck="false" />
-        <button><img src="img/search.png" alt="" /></button>
+        <button><img src="img/search.png" alt="Search" /></button>
       </div>
       <div class="error">
         <p>Invalid city name.</p>
       </div>
       <div class="weather">
-        <img src="img/rain.png" class="weather-icon" alt="" />
-        <h1 class="temp">22*C</h1>
+        <img src="img/rain.png" class="weather-icon" alt="Weather Icon" />
+        <h1 class="temp">22°C</h1>
         <h2 class="city">New York</h2>
         <div class="details">
           <div class="col">
-            <img src="img/humidity.png" alt="" />
+            <img src="img/humidity.png" alt="Humidity" />
             <div>
               <p class="humidity">50%</p>
-              <p>humidity</p>
+              <p>Humidity</p>
             </div>
           </div>
           <div class="col">
-            <img src="img/wind.png" alt="" />
+            <img src="img/wind.png" alt="Wind Speed" />
             <div>
               <p class="wind">15 km/h</p>
-              <p>Wind speed</p>
+              <p>Wind Speed</p>
             </div>
           </div>
         </div>
       </div>
     </div>
-    <script src="./index.js"></script>
+    <script src="index.js"></script>
   </body>
 </html>
